--- a/package.json
+++ b/package.json
@@ -8,25 +8,16 @@
     "build-client": "cd ./client && yarn build"
   },
   "dependencies": {
-    "bootstrap": "5.1.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongoose": "^6.8.1",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.20",
-    "react-bootstrap": "^2.7.0"
+    "mongoose": "^6.2.3",
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  },
- "nodemonConfig": {
-   "env": {
-     "CONNECTION_STRING": "YOUR_CONNECTION_STRING"
-   }
- }
+  }
 }
-
