--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CONNECTION_STRING = mongodb+srv://oche:<password>@prismablogr.iqsrw2b.mongodb.net/?retryWrites=true&w=majority
+CONNECTION_STRING = mongodb://mongo:emjJvNVKzVmlds53WOMU@containers-us-west-132.railway.app:7312
